{
  "version": 4,
  "terraform_version": "1.6.1",
  "serial": 1281,
  "lineage": "4d1066db-cf30-37eb-7962-cd979f0ea4ca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastica_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00c0c39cc710e7f02",
            "arn": "arn:aws:ec2:us-east-1:208603095961:elastic-ip/eipalloc-00c0c39cc710e7f02",
            "domain": "vpc",
            "id": "eipalloc-00c0c39cc710e7f02",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-44-112-82.compute-1.amazonaws.com",
            "public_ip": "52.44.112.82",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ServerWEB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-058bd2d568351da34",
            "arn": "arn:aws:ec2:us-east-1:208603095961:instance/i-08012c7b9cb75a8be",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08012c7b9cb75a8be",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "clave_administrador",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d4001429ce869c79",
            "private_dns": "ip-100-100-11-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "100.100.11.10",
            "public_ip": "18.232.157.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a0872d28ab297276",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ea9736804b6419d",
            "tags": {
              "Name": "ServerWEB"
            },
            "tags_all": {
              "Name": "ServerWEB"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-077a9b8f8002e4048"
            ]
          },
          "dependencies": [
            "aws_security_group.GS_http_1",
            "aws_subnet.subred_apache_1",
            "aws_vpc.vpc_tfg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208603095961:internet-gateway/igw-0d297b2dcd7661bc7",
            "id": "igw-0d297b2dcd7661bc7",
            "owner_id": "208603095961",
            "tags": {
              "Name": "Gateway VPC principal"
            },
            "tags_all": {
              "Name": "Gateway VPC principal"
            },
            "vpc_id": "vpc-0f581f722b684252c"
          },
          "dependencies": [
            "aws_vpc.vpc_tfg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00c0c39cc710e7f02",
            "association_id": "eipassoc-05ed368e273e0ba30",
            "connectivity_type": "public",
            "id": "nat-096acbc373bc62fa3",
            "network_interface_id": "eni-08dea8607b18f93b3",
            "private_ip": "100.100.11.164",
            "public_ip": "52.44.112.82",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01ea9736804b6419d",
            "tags": {
              "Name": "natgw 1"
            },
            "tags_all": {
              "Name": "natgw 1"
            }
          },
          "dependencies": [
            "aws_eip.elastica_1",
            "aws_internet_gateway.igw_1",
            "aws_subnet.subred_apache_1",
            "aws_vpc.vpc_tfg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tab_ruteo_apache_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208603095961:route-table/rtb-0e58fca7489bc4d10",
            "id": "rtb-0e58fca7489bc4d10",
            "owner_id": "208603095961",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d297b2dcd7661bc7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tabla ruteo http 1"
            },
            "tags_all": {
              "Name": "Tabla ruteo http 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f581f722b684252c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_1",
            "aws_vpc.vpc_tfg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd8cd52909182249",
            "route_table_id": "rtb-0e58fca7489bc4d10",
            "subnet_id": "subnet-01ea9736804b6419d"
          },
          "dependencies": [
            "aws_internet_gateway.igw_1",
            "aws_route_table.tab_ruteo_apache_1",
            "aws_subnet.subred_apache_1",
            "aws_vpc.vpc_tfg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "GS_http_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208603095961:security-group/sg-077a9b8f8002e4048",
            "description": "Grupo de seguridad para permitir el acceso al puerto 80, http 1",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077a9b8f8002e4048",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "100.100.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "100.100.0.0/16"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "GS_http_1",
            "name_prefix": "",
            "owner_id": "208603095961",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Grupo seguridad http 1"
            },
            "tags_all": {
              "Name": "Grupo seguridad http 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f581f722b684252c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_tfg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred_apache_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208603095961:subnet/subnet-01ea9736804b6419d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "100.100.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ea9736804b6419d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "208603095961",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subred HTTP 1"
            },
            "tags_all": {
              "Name": "Subred HTTP 1"
            },
            "vpc_id": "vpc-0f581f722b684252c"
          },
          "dependencies": [
            "aws_vpc.vpc_tfg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_tfg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208603095961:vpc/vpc-0f581f722b684252c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "100.100.0.0/16",
            "default_network_acl_id": "acl-0eefce125d0091e5e",
            "default_route_table_id": "rtb-0bdf47f89c7259d5c",
            "default_security_group_id": "sg-0d8a5dcb7c18431cf",
            "dhcp_options_id": "dopt-0b41ad01aae195209",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f581f722b684252c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bdf47f89c7259d5c",
            "owner_id": "208603095961",
            "tags": {
              "Name": "Vpc balanceo principal"
            },
            "tags_all": {
              "Name": "Vpc balanceo principal"
            }
          }
        }
      ]
    }
  ]
}